Added poem and backrgound

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>impress.js | presentation tool based on the power of CSS3 transforms and transitions in modern browsers | by Bartek Szopka @bartaz</title>
+    <title>The Tables Turned│poetry analysis</title>
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
-    <meta name="author" content="Bartek Szopka" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
     <link href="css/impress-demo.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.png" />
@@ -17,61 +16,67 @@
     <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
+
 <div id="impress">
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
-    </div>
-    <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don't you think that presentations given <strong>in modern browsers</strong> shouldn't <strong>copy the limits</strong> of 'classic' slide decks?</q>
+
+    <div class="step slide" data-x="2500" data-y="0">
+        <h2>The Tables Turned</h2><br>
+        <h3>William Wordsworth</h3><br>
+        <p>
+            UP! up! my Friend, and quit your books;
+          <br>Or surely you'll grow double:
+          <br>Up! up! my Friend, and clear your looks;
+          <br>Why all this toil and trouble?
+<br>
+          <br>The sun, above the mountain's head,
+          <br>A freshening lustre mellow
+          <br>Through all the long green fields has spread,
+          <br>His first sweet evening yellow.
+<br>
+          <br>Books! 'tis a dull and endless strife:
+          <br>Come, hear the woodland linnet,                             10
+          <br>How sweet his music! on my life,
+          <br>There's more of wisdom in it.
+<br>
+          <br>And hark! how blithe the throstle sings!
+          <br>He, too, is no mean preacher:
+          <br>Come forth into the light of things,
+          <br>Let Nature be your teacher.
+<br>
+          <br>She has a world of ready wealth,
+          <br>Our minds and hearts to bless--
+          <br>Spontaneous wisdom breathed by health,
+          <br>Truth breathed by cheerfulness.                             20
+<br>
+          <br>One impulse from a vernal wood
+          <br>May teach you more of man,
+          <br>Of moral evil and of good,
+          <br>Than all the sages can.
+<br>
+          <br>Sweet is the lore which Nature brings;
+          <br>Our meddling intellect
+          <br>Mis-shapes the beauteous forms of things:--
+          <br>We murder to dissect.
+<br>
+          <br>Enough of Science and of Art;
+          <br>Close up those barren leaves;                               30
+          <br>Come forth, and bring with you a heart
+          <br>That watches and receives.
+          <br>        
+          <br>                                            1798.
+        </p>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
-    </div>
-    <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-        <span class="try">then you should try</span>
-        <h1>impress.js<sup>*</sup></h1>
-        <span class="footnote"><sup>*</sup> no rhyme intended</span>
+
+
+
+
+
+    <div id="overview" class="step" data-x="3000" data-y="1500" data-z="-1000" data-scale="10">
     </div>
 
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>It's a <strong>presentation tool</strong> <br/>
-        inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br/>
-        and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
-    </div>
 
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
-    </div>
 
-    <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <p>and <b>tiny</b> ideas</p>
-    </div>
-
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
-    </div>
-
-    <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
-    </div>
-
-    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
-    </div>
-
-    <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
-    </div>
-
-    <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
-    </div>
-
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
-    </div>
 </div>
 
 
@@ -84,9 +89,166 @@ if ("ontouchstart" in document.documentElement) {
     document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
 }
 </script>
-
-
 <script src="js/impress.js"></script>
 <script>impress().init();</script>
+<script>
+var degToRad = Math.PI/180;
+var body = document.getElementsByTagName('html')[0];
+var wid = body.clientWidth+17;
+var hei = Math.max(530,body.clientHeight-10);
+var cvs = document.getElementById('cvs');
+cvs.height = hei;
+cvs.width = wid;
+var seasons = ["winter", "spring", "summer", "fall"];
+var season = seasons[Math.floor(Math.random()*seasons.length)];
+var ctx = cvs.getContext('2d');
+function randomizeOpacity(r,g,b){
+  r += Math.max(0,Math.min(255,50 - Math.floor(Math.random()*100)));
+  g += Math.max(0,Math.min(255,50 - Math.floor(Math.random()*100)));
+  b += Math.max(0,Math.min(255,50 - Math.floor(Math.random()*100)));
+  var a = Math.random()*0.6 + 0.4;
+  return 'rgba('+r+','+g+','+b+','+a+')';
+}
+function makeLeaf(x,y,angle,newAngle) {
+  branch(x, y, 0, 0, angle, 0, 1, newAngle, true);
+}
+function branch(x, y, thick, len, angle, iterations, i, a,leaf) {
+  ctx.lineWidth = thick;
+  ctx.lineCap = 'round';
+  ctx.strokeStyle = 'saddlebrown';
+  ctx.beginPath();
+  ctx.moveTo(x, hei-y);
+  i = i || 0;
+  a = a || 0;
+  leaf = leaf || false;
+  if (leaf) {
+    len = 5;
+    ctx.lineWidth = 3;
+    if (season === "spring") {
+      //pink, green
+      ctx.strokeStyle = Math.random()* 5 > 3? randomizeOpacity(255,192,203): randomizeOpacity(0,128,0);
+    } else if (season === "summer") {
+      //green 
+      ctx.strokeStyle = randomizeOpacity(0,128,0);
+    } else if (season === "fall") {
+      var t = 'transparent'
+      //orange, red, yellow
+      var fallColors = [randomizeOpacity(255,165,0), randomizeOpacity(255,0,0),randomizeOpacity(255,165,0)];
+      ctx.strokeStyle = Math.random()* 15 < 13? 'transparent': fallColors[Math.floor(Math.random()*fallColors.length)];
+    } else {
+      ctx.strokeStyle = 'transparent';
+    }
+    
+    //this is an actual thing.
+    ctx.lineCap = 'butt';
+  }
+  var newLen = (i ===0 || leaf)? len : len * (.5 + Math.random()*.6);
+  var newA =    i ===0? a : a + (4*angle - (Math.random()*8*angle));
+  var dX = x+ (newLen* Math.sin(a*degToRad));
+  var dY = y+ (newLen * Math.cos(a*degToRad));
+  ctx.lineTo(dX, hei - dY);
+  var it = 3+ Math.floor(Math.random()*iterations);
+  if  (!leaf && i >= it ) {
+    ctx.lineWidth = Math.min(1, ctx.lineWidth);
+  }
+  ctx.stroke();
+  a += 10 - (Math.random()*20);
+  if (!leaf && i < it) {
+    var priority = Math.random()*2 > 1? -1 : 1; 
+    branch(dX, dY, Math.max(.2,thick*.7), len*.85, angle, iterations, i+1, a+priority*angle);
+    branch(dX, dY, Math.max(.2,thick*.7), len*.85, angle, iterations, i+1, a-priority*angle);
+    if (Math.random()*2 > 1) {
+      branch(x+(dX-x)*.4, y+(dY-y)*.4, Math.max(.2,thick*.7), len*.85, angle, iterations, i+1, a);
+    }
+    if (i >1 && Math.random()*2 > 1) {
+      makeLeaf(x+(dX-x)/2, y+(dY-y)/2,angle, 2*(a+angle));;
+    }
+    if (i >1 && Math.random()*2 > 1) {
+      makeLeaf(x+(dX-x)/2, y+(dY-y)/2,angle, 2*(a-angle));
+    }
+  } else if (!leaf) {
+    makeLeaf(dX, dY, angle, 2*a+angle);
+    makeLeaf(dX, dY, angle, 2*a-angle);
+    makeLeaf(dX, dY, angle, a);
+  }
+    }
+function newTreeButton(color, text) {
+  ctx.lineWidth = 1;
+  ctx.strokeStyle='black';
+  ctx.fillStyle = color;
+  ctx.rect(5,5,130,50);
+  ctx.fill();
+  ctx.stroke();
+  ctx.font = "bold 14pt sans-serif";
+  ctx.fillStyle = 'black';
+  ctx.fillText(text, 25, 35);
+};
+ctx.fillStyle = 'skyblue';
+ctx.lineWidth = 0;
+ctx.fillRect(0,0,wid,hei);
+ctx.fillStyle = 'limegreen'
+ctx.fillRect(0,hei-20,wid,20);
+function checkFall() {
+  if (season === "fall") {
+    var i;
+    for (i=0; i < 500; i++) {
+      ctx.beginPath();
+      var colors = [randomizeOpacity(255,165,0), randomizeOpacity(255,0,0),randomizeOpacity(255,165,0)];
+      ctx.strokeStyle = colors[Math.floor(Math.random()*colors.length)];
+      ctx.lineWidth = 3;
+      var x = Math.random()*wid;
+      var y = hei - Math.random()*20;
+      ctx.moveTo(x, y);
+      ctx.lineTo(x+5, y);
+      ctx.stroke(); 
+    }
+  }
+};
+checkFall();
+branch(wid/2, 5, 15, 100, 20+Math.random()*5, 15 + Math.floor(Math.random()*5));
+
+
+newTreeButton('gainsboro', 'New Tree');
+window.onmousemove = function(e){
+  if (e.clientX >= 5 && e.clientX <= 135 && e.clientY >= 5 && e.clientY <= 55) {
+    newTreeButton('gray', 'New Tree');
+  } else {
+    newTreeButton('gainsboro', 'New Tree');
+  }
+};
+function newTreeButton(color, text, offset) {
+  offset = offset ||0;
+  ctx.lineWidth = 1;
+  ctx.strokeStyle='black';
+  ctx.fillStyle = color;
+  ctx.beginPath();
+  ctx.rect(5,5,130,50);
+  ctx.fill();
+  ctx.stroke();
+  ctx.font = "bold 14pt sans-serif";
+  ctx.fillStyle = 'black';
+  ctx.fillText(text, 25+offset, 35);
+  ctx.strokeStyle = 'green';
+};
+window.onclick = function(e) {
+  if (e.clientX >= 5 && e.clientX <= 135 && e.clientY >= 5 && e.clientY <= 55) {
+    setTimeout(function(){
+      ctx.fillStyle = 'skyblue';
+      ctx.lineWidth = 0;
+      ctx.fillRect(0,0,wid,hei);
+      ctx.fillStyle = 'limegreen'
+      ctx.fillRect(0,hei-20,wid,20);
+      newTreeButton('pink', 'More nature...', -19);
+      season = seasons[Math.floor(Math.random()*seasons.length)];
+      setTimeout(function(){
+        ctx.strokeStyle='green';
+        branch(wid/2, 5, 15, 100, 20+Math.random()*5, 15 + Math.floor(Math.random()*5));
+        newTreeButton('gainsboro', 'New Tree');
+        checkFall();
+      },20);
+    }, 5);   
+  } 
+};
+</script>
 </body>
 </html>
