--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
 
 <div id="impress">
 
+      <div id="overview" class="step" data-x="3000" data-y="1500" data-z="-1000" data-scale="10">
+    </div>
+
+    <div class="markup step" data-x="2500" data-y="-790" data-z="100" >
+        <p>The Tables Turned</p>
+    </div>
+
+    <div class="markup step" data-x="2500" data-y="-790" data-z="50" data-rotate-x="-45" >
+        <p>The Reversal</p>
+    </div>
+    
+    <div class="markup step" data-x="2510" data-y="-720" data-z="1" data-scale=".95" data-rotate-x="-5">
+        <p>William Wordsworth</p>
+    </div>
+
+    <div class="markup step" data-x="2500" data-y="-649" data-z="-1" data-scale=".95" style="width: 30em;">
+      <p>UP! up!   <em style="color:green;">Repetition</em></p>
+    </div>
+
+    <div class="impress-on-overview step markup" data-x="2200" data-y="-520" data-z="-1" data-scale=".25" data-rotate-x="75">
+      Entire stanza is <em>enthusiastic</em> and <strong> positive</strong></div>
+
     <div class="step slide" data-x="2500" data-y="0">
         <h2>The Tables Turned</h2><br>
         <h3>William Wordsworth</h3><br>
@@ -69,11 +91,6 @@
 
 
 
-
-
-
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-z="-1000" data-scale="10">
-    </div>
 
 
 
