Adjusted stanza 1 formatting

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
       <p>UP! up!   <em style="color:green;">Repetition</em></p>
     </div>
 
-    <div class="impress-on-overview step markup" data-x="2200" data-y="-520" data-z="-1" data-scale=".25" data-rotate-x="75">
+    <div class="impress-on-overview step markup" data-x="2200" data-y="-520" data-z="10" data-scale=".25" data-rotate-x="75" style="width: 24em;">
       Entire stanza is <em>enthusiastic</em> and <strong> positive</strong></div>
+
+    <div class="markup step" data-x="2500" data-y="-649" data-z="-1" data-scale=".95" style="width: 30em;">
+      <p>UP! up!   <em style="color:green;">Repetition</em></p>
+    </div>
 
     <div class="step slide" data-x="2500" data-y="0">
         <h2>The Tables Turned</h2><br>
