Added further stanza analysis

--- a/index.html
+++ b/index.html
@@ -41,11 +41,27 @@
     <div class="impress-on-overview step markup" data-x="2200" data-y="-520" data-z="10" data-scale=".25" data-rotate-x="75" style="width: 24em;">
       Entire stanza is <em>enthusiastic</em> and <strong> positive</strong></div>
 
-    <div class="markup step" data-x="2500" data-y="-649" data-z="-1" data-scale=".95" style="width: 30em;">
-      <p>UP! up!   <em style="color:green;">Repetition</em></p>
+   <div class="markup step" data-x="2300" data-y="-375" data-z="1" data-scale=".1" data-rotate-x="-5">
+    The <em>sun</em>, above the <strong>mountain's</strong> head,
+          <br>A <em>freshening</em> lustre mellow
+          <br>Through all the </em>long green</em> fields has spread,
+          <br>His first <em>sweet</em> evening yellow.</div>
+
+    <div class="markup step" data-x="2300" data-y="-300" data-z="10" data-scale=".35" data-rotate-x="55"style="width: 30em; text-align:center;">
+      <p><em>above the mountain's head <br> evening yellow</em></p>
+      <p><strong>time is fleeting</strong></p>
     </div>
 
-    <div class="step slide" data-x="2500" data-y="0">
+    <div class="markup step" data-x="2300" data-y="-50" data-z="5" data-scale=".35" data-rotate-x="55"style="width: 30em; text-align:center;"> <em>And hark! how blithe the throstle sings!</em> <br>many exclamitories<br> such beauty <br> wow </div>
+
+    <div class="markup step" data-x="2300" data-y="-10" data-z="10" data-scale=".35" data-rotate-x="-55"style="width: 30em; text-align:center;"> 
+    <strong>"There's more wisdom in it"</strong><br><em>romantic</em>: true experience is gained through first-hand experience</div>    
+
+    <div class="markup step" data-x="2375" data-y="30" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;"> Constant light/glowing motif</div>  
+
+    <div>Science causes more harm than good</div>
+
+    <div class="step slide" data-x="2500" data-y="-95">
         <h2>The Tables Turned</h2><br>
         <h3>William Wordsworth</h3><br>
         <p>
