--- a/index.html
+++ b/index.html
@@ -52,16 +52,20 @@
       <p><strong>time is fleeting</strong></p>
     </div>
 
-    <div class="markup step" data-x="2300" data-y="-50" data-z="5" data-scale=".35" data-rotate-x="55"style="width: 30em; text-align:center;"> <em>And hark! how blithe the throstle sings!</em> <br>many exclamitories<br> such beauty <br> wow </div>
+    <div class="markup step" data-x="2250" data-y="-70" data-z="30" data-scale=".35" data-rotate-x="55"style="width: 30em; text-align:center;"> <em>And hark! how blithe the throstle sings!</em> <br>many exclamitories<br> such beauty <br> wow </div>
 
-    <div class="markup step" data-x="2300" data-y="-10" data-z="10" data-scale=".35" data-rotate-x="-55"style="width: 30em; text-align:center;"> 
+    <div class="markup step" data-x="2250" data-y="-35" data-z="30" data-scale=".35" data-rotate-x="-55"style="width: 30em; text-align:center;"> 
     <strong>"There's more wisdom in it"</strong><br><em>romantic</em>: true experience is gained through first-hand experience</div>    
 
-    <div class="markup step" data-x="2375" data-y="30" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;"> Constant light/glowing motif</div>  
+    <div class="markup step" data-x="2375" data-y="30" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;"> <em>into the light of things</em>Constant light/glowing motif</div>  
 
-    <div>Science causes more harm than good</div>
+    <div class="markup step" data-x="2375" data-y="300" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;">Book learning is bad</div>
 
-    <div class="step slide" data-x="2500" data-y="-95">
+    <div class="markup step" data-x="2375" data-y="400" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;">Science causes more harm than good</div>
+
+    <div class="markup step" data-x="2300" data-y="553" data-z="-1" data-scale="1" data-rotate-x="-1"style="width: 25em; text-align:center;">Close up those barren leaves</div>
+
+    <div class="step slide" data-x="2500" data-y="-0">
         <h2>The Tables Turned</h2><br>
         <h3>William Wordsworth</h3><br>
         <p>
@@ -76,7 +80,7 @@
           <br>His first sweet evening yellow.
 <br>
           <br>Books! 'tis a dull and endless strife:
-          <br>Come, hear the woodland linnet,                             10
+          <br>Come, hear the woodland linnet,                             
           <br>How sweet his music! on my life,
           <br>There's more of wisdom in it.
 <br>
