--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div class="markup step" data-x="2250" data-y="-35" data-z="30" data-scale=".35" data-rotate-x="-55"style="width: 30em; text-align:center;"> 
     <strong>"There's more wisdom in it"</strong><br><em>romantic</em>: true experience is gained through first-hand experience</div>    
 
-    <div class="markup step" data-x="2375" data-y="30" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;"> <em>into the light of things</em>Constant light/glowing motif</div>  
+    <div class="markup step" data-x="2600" data-y="0" data-z="10" data-scale=".25" data-rotate-x="-1"style="width: 20em; text-align:center;"> <em>into the light of things</em><br>Constant light/glowing motif</div>  
 
-    <div class="markup step" data-x="2375" data-y="300" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;">Book learning is bad</div>
+    <div class="markup step" data-x="2300" data-y="400" data-z="10" data-scale=".35" data-rotate-x="-45"style="width: 30em; text-align:center;">Book learning is bad</div>
 
-    <div class="markup step" data-x="2375" data-y="400" data-z="10" data-scale=".35" data-rotate-x="-1"style="width: 30em; text-align:center;">Science causes more harm than good</div>
+    <div class="markup step" data-x="2250" data-y="580" data-z="-1" data-scale=".35" data-rotate-x="-1"style="width: 20em; text-align:center;">Science causes more harm than good</div>
 
-    <div class="markup step" data-x="2300" data-y="553" data-z="-1" data-scale="1" data-rotate-x="-1"style="width: 25em; text-align:center;">Close up those barren leaves</div>
+    <div class="markup step" data-x="2300" data-y="649" data-z="-1" data-scale="1" data-rotate-x="-1"style="width: 25em; text-align:center;">Close up those barren leaves</div>
 
     <div class="step slide" data-x="2500" data-y="-0">
         <h2>The Tables Turned</h2><br>
